Files/Envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 6080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/c/"
                route:
                  prefix_rewrite: "/"
                  cluster: catalog-service
              - match:
                  prefix: "/d/"
                route:
                  prefix_rewrite: "/"
                  cluster: discount-service
              - match:
                  prefix: "/b/"
                route:
                  prefix_rewrite: "/"
                  cluster: basket-service
              - match:
                  prefix: "/o/"
                route:
                  prefix_rewrite: "/"
                  cluster: ordering-service
              - match:
                  prefix: "/r/"
                route:
                  prefix_rewrite: "/"
                  cluster: reporting-service
          http_filters:
          - name: envoy.filters.http.router
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 6090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route_ssl
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/c/"
                route:
                  prefix_rewrite: "/"
                  cluster: catalog-service-ssl
              - match:
                  prefix: "/d/"
                route:
                  prefix_rewrite: "/"
                  cluster: discount-service-ssl
              - match:
                  prefix: "/b/"
                route:
                  prefix_rewrite: "/"
                  cluster: basket-service-ssl
              - match:
                  prefix: "/o/"
                route:
                  prefix_rewrite: "/"
                  cluster: ordering-service-ssl
              - match:
                  prefix: "/r/"
                route:
                  prefix_rewrite: "/"
                  cluster: reporting-service-ssl
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: "/etc/ssl/certs/bonnyland.crt"
              private_key:
                filename: "/etc/ssl/certs/bonnyland.key"
  clusters:
  - name: catalog-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: catalog-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-catalog
                port_value: 80
  - name: discount-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discount-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-discount
                port_value: 80
  - name: basket-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: basket-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-basket
                port_value: 80
  - name: ordering-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ordering-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-ordering
                port_value: 80
  - name: reporting-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: reporting-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-reporting
                port_value: 80
  - name: catalog-service-ssl
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: catalog-service-ssl
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-catalog
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: localhost
  - name: discount-service-ssl
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discount-service-ssl
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-discount
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: localhost
  - name: basket-service-ssl
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: basket-service-ssl
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-basket
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: localhost
  - name: ordering-service-ssl
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ordering-service-ssl
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-ordering
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: localhost
  - name: reporting-service-ssl
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: reporting-service-ssl
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: blbs-reporting
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: localhost
